--- a/tic-toc-toe/src/App.css
+++ b/tic-toc-toe/src/App.css
@@ -21,7 +21,19 @@
   color: #09d3ac;
 }
 .square{
-  background: white;
-  border: 1px solid grey;
-  float: left;
+  background: #4169E1;
+	border: 2px solid #999;
+	float: left;
+	font-size: 24px;
+	font-weight: bold;
+	line-height: 34px;
+	height: 34px;
+	margin-right: -2px;
+	margin-top: -2px;
+	padding: 0;
+	text-align: center;
+	width: 34px;
+}
+.square:focus {
+	outline: none;
 }
